Update library documentation
Signed-off-by: fpr <fabien.perroquin@wi6labs.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -31,8 +31,10 @@ Paul Stoffregen    https://github.com/PaulStoffregen
 per1234            https://github.com/per1234
 Richard Sim
 Scott Fitzgerald   https://github.com/shfitz
+STMicroelectronics https://github.com/stm32duino
 Thibaut Viard      https://github.com/aethaniel
 Tom Igoe           https://github.com/tigoe
+Wi6Labs            http://www.wi6labs.com/
 WizNet             http://www.wiznet.co.kr
 Zach Eveland       https://github.com/zeveland
 
