--- a/AUTHORS
+++ b/AUTHORS
@@ -31,6 +31,7 @@ Paul Stoffregen    https://github.com/PaulStoffregen
 per1234            https://github.com/per1234
 Richard Sim
 Scott Fitzgerald   https://github.com/shfitz
+Stefan Staub       https://github.com/sstaub
 STMicroelectronics https://github.com/stm32duino
 Thibaut Viard      https://github.com/aethaniel
 Tom Igoe           https://github.com/tigoe
